fix: solve problems with layout, untrack some files and folders (#1)
### chore: remove .DS_Store, add .gitignore

- Remove .DS_Store
- Add .gitignore to untrack .DS_Store, /images and /videos

### fix: solve problems with layout

- Add fonts: Helvetica Neue, PingFang SC, Arial, Microsoft YaHei, sans-serif
- Adjust logo align to the left of the page-title
- Fix img-list images are stretched in Safari
- Fix the height of poster-item-title and poster-item-content to solve positioning problem
- Remove focus `outline` when video is controlled in some browsers
- Use `filter: backdrop()` instead of `box-shadow` to achieve the projection effect of footer-wechat_qrcode and switch-lang
- Fix legal font size in footer
- Increase compatibility: `opacity`, `outline`, `box-shadow`

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -68,7 +68,8 @@ footer {
   background-color: #fff;
   border: 1px solid #d8d8d8;
   border-radius: 7px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
+  -webkit-filter: drop-shadow(0 5px 20px rgba(0, 0, 0, .2));
+  filter: drop-shadow(0 5px 20px rgba(0, 0, 0, .2));
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -137,8 +138,12 @@ footer {
   margin-right: auto
 }
 
-.copyright_legal_lang-items>li, .copyright_legal_lang-items>li>a {
+.copyright_legal_lang-items>li {
   font-size: 1.1em;
+  color: #999
+}
+
+.copyright_legal_lang-items>li>a {
   color: #999
 }
 
@@ -169,7 +174,8 @@ footer {
   background-color: #fff;
   border: 1px solid #d8d8d8;
   border-radius: 7px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
+  -webkit-filter: drop-shadow(0 5px 20px rgba(0, 0, 0, .2));
+  filter: drop-shadow(0 5px 20px rgba(0, 0, 0, .2));
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box
