--- a/styles/header.css
+++ b/styles/header.css
@@ -12,8 +12,6 @@ header {
   display: flex;
   -webkit-flex: 0 0 120px;
   flex: 0 0 120px;
-  -webkit-justify-content: center;
-  justify-content: center;
   -webkit-align-items: center;
   align-items: center
 }
@@ -21,6 +19,7 @@ header {
 .logo a {
   width: 50px;
   height: 30px;
+  margin-left: 32px;
   background: url(../images/samadoyo.png) no-repeat center / contain
 }
 
@@ -55,6 +54,11 @@ header {
 
 .gn-menu a:hover {
   color: #7d7d7d
+}
+
+.shop-now {
+  -webkit-justify-content: center;
+  justify-content: center
 }
 
 .shop-now a {
